--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Cascade"]
 description = "A disk space visualization tool for macOS"
 
 [dependencies]
-iced = { version = "0.10", features = ["canvas", "tokio"] }
+iced = { version = "0.10", features = ["canvas", "tokio", "debug"] }
 tokio = { version = "1.32", features = ["full"] }
 walkdir = "2.4"
 chrono = "0.4"
@@ -15,3 +15,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 open = "5.0"
 humansize = "2.1"
+native-dialog = "0.7"
+thousands = "0.2"
